# twitter-scraper

./: Cargo.toml  LICENSE  README.md  makefile
src/: constants.rs  headers.rs  lib.rs  main.rs  parser.rs  request_builder.rs
src/models/: date_format.rs  mod.rs  tweet.rs  user.rs  utils.rs
src/parser/: cursor.rs  mod.rs  tweets.rs
